# ncsw-chemistry

./: README.md  environment.yaml  setup.cfg
ncsw_chemistry/: __init__.py
ncsw_chemistry/compound/: __init__.py  atom_map_number.py  format_conversion.py
ncsw_chemistry/compound/atom/: __init__.py  map_number.py  property.py
ncsw_chemistry/compound/bond/: __init__.py  property.py
ncsw_chemistry/compound/substructure/: __init__.py
ncsw_chemistry/compound/utility/: __init__.py  atom.py  bond.py  formatting.py  standardization.py  substructure.py  typing_.py
ncsw_chemistry/reaction/: __init__.py  compound_atom_map_number.py  compound_extraction.py  format_conversion.py  typing.py
ncsw_chemistry/reaction/compound/: __init__.py  extraction.py
ncsw_chemistry/reaction/compound/atom/: __init__.py  map_number.py
ncsw_chemistry/reaction/utility/: __init__.py  compound.py  formatting.py  reactivity.py  standardization.py
ncsw_chemistry/utility/: __init__.py
ncsw_chemistry/utility/compound/: __init__.py  atom_map_number.py  atom_property.py  bond_property.py  format_conversion.py  sanitization.py  standardization.py  substructure.py
ncsw_chemistry/utility/compound/atom/: __init__.py  property.py
ncsw_chemistry/utility/compound/bond/: __init__.py  (+1 more)
ncsw_chemistry/utility/reaction/: __init__.py  compound_atom_map_number.py  compound_extraction.py  compound_standardization.py  format_conversion.py  reactivity.py  sanitization.py  standardization.py  template.py  typing.py
references/: 20190613_coley_c_w_et_al.md
scripts/: apply_reaction_retro_template.py  extract_reaction_reactive_sites_and_synthons.py  extract_reaction_retro_template.py
(+4 files in other folders)
