[metadata]
name = ncsw_chemistry
version = 2024.7.1
author = Haris Hasic
description = The NeoChemSynthWave: Chemistry project.
long_description = file: README.md
long_description_content_type = text/markdown
license_files = file: LICENSE
keywords =
    chemical-compounds,
    chemical-reactions,
    chemical-synthesis,
    chemoinformatics,
    retrosynthesis,
    retrosynthetic-analysis

[options]
packages = find:

[options.packages.find]
include =
    ncsw_chemistry
