[metadata]
name = ncsw_chemistry
version = 2025.5.1
author = Haris Hasic
description = The NeoChemSynthWave: Chemistry project.
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
keywords =
    chemical-compound-patterns,
    chemical-compounds,
    chemical-reaction-patterns,
    chemical-reactions,
    chemical-synthesis,
    retrosynthesis,
    retrosynthetic-analysis,
    synthesizability,
    synthetic-accessibility,
    synthetic-complexity

[options]
packages = find:

[options.packages.find]
include = ncsw_chemistry*
